--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tsparticles": "^1.41.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
